--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ body {
 
 }
 
+p {
+  font-family: Lato;
+}
+
+
 .btn1 {
     width:200px;
     height:50px;
@@ -63,7 +68,7 @@ body {
 /* Waves */
 
 
-.ocean { 
+.ocean {
   width:100%;
   position:absolute;
   bottom:400;
@@ -72,7 +77,7 @@ body {
 }
 
 .wave {
-  background: url(assets/wave.svg) repeat-x; 
+  background: url(assets/onda2_2.png) repeat-x;
   position: absolute;
   top: -198px;
   width: 6400px;
@@ -104,5 +109,3 @@ body {
     transform: translate3d(0,5px,0);
   }
 }
-
-
